--- a/app/assets/stylesheets/create-review.scss
+++ b/app/assets/stylesheets/create-review.scss
@@ -32,14 +32,11 @@
 }
 .create-review-submit {
   max-width: 100px;
-  padding: 5px;
+  padding: 10px;
   border: 1px grey;
-  font-family: "Lato", Helvetica;
   font-size: 15px;
-  padding-top: 3px;
-  padding-bottom: 3px;
   border-radius: 3px;
-  background-color: rgb(64, 217, 172);
+  background-color: #40d9ac;
   color: white;
   height: 20px;
 }
