--- a/app/assets/stylesheets/edit-review.scss
+++ b/app/assets/stylesheets/edit-review.scss
@@ -1,5 +1,7 @@
 .edit-review-form {
-  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
@@ -30,14 +32,11 @@
 }
 .edit-review-submit {
   max-width: 100px;
-  padding: 5px;
+  padding: 10px;
   border: 1px grey;
-  font-family: "Lato", Helvetica;
   font-size: 15px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  border-radius: 3px;
-  background-color: rgb(64, 217, 172);
+  background-color: #40d9ac;
   color: white;
   height: 20px;
+  border-radius: 3px;
 }
