minor styling tweaks

--- a/app/assets/stylesheets/listing-show.scss
+++ b/app/assets/stylesheets/listing-show.scss
@@ -82,8 +82,15 @@
   padding-top: 50px;
   margin-left: 25px;
   font-size: 13px;
+  width: 200px;
 }
 
+.new-check-in-after {
+  font-weight: bold;
+}
+
+.new-val {
+}
 
 
 .listing-review-container {
