--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -328,7 +328,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.1);
   margin-top: 10px;
   font-weight: 400px;
-  padding-right: 15px;
+  margin-right: 15px;
 }
 
 
