--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -3,6 +3,7 @@
   margin-bottom: 10px;
   font-weight: bold;
   font-size: 24px;
+  padding-top: 10px;
 }
 
 .user-booking-verified {
@@ -34,6 +35,15 @@
   font-size: 18px;
 }
 
+
+.booking-outer-most {
+  border: 1px solid rgb(229, 229, 229);
+  box-shadow: 0px 0px 2px rgb(229, 229, 229);
+  color: rgb(51, 51, 51);
+  border-radius: 3px;
+}
+
+
 .booking-form {
   display: flex;
   flex-direction: column;
@@ -61,11 +71,9 @@
 .booking-container-form {
   font-size: 13px;
   border-radius: 3px;
-  border: 1px solid rgb(229, 229, 229);
+
   width: 390px;
-  margin-right: 15px;
-  box-shadow: 0px 0px 2px rgb(229, 229, 229);
-  color: rgb(51, 51, 51);
+
   display: flex;
   justify-content: center;
 }
@@ -76,8 +84,8 @@
 
 .check-in-out {
   display: flex;
-  padding: 10px;
   justify-content: center;
+  margin-top: 10px;
 }
 
 .check-in-container {
@@ -86,10 +94,15 @@
 
 }
 
-.check-out-container {
-  display: flex;
-  flex-direction: column;
-}
+
+// .check-out-container {
+//   display: flex;
+//   flex-direction: column;
+//   border-left: 1px solid rgb(229, 229, 229);
+//   border-right: 1px solid rgb(229, 229, 229);
+//   padding-left: 25px;
+//   padding-right: 5px;
+// }
 
 .form-input {
   width: 50px;
@@ -99,6 +112,10 @@
   padding-right: 10px;
   padding-bottom: 5px;
   font-weight: bold;
+
+}
+
+.click-in-picker {
 
 }
 
@@ -144,8 +161,6 @@
 
 .guests-label {
   font-weight: bold;
-  border-bottom: 1px solid rgb(229, 229, 229);
-  border-top: 1px solid rgb(229, 229, 229);
 }
 
 .booking-guests {
@@ -159,7 +174,6 @@
   width: 390px;
   border: 1px grey;
   font-family: "Lato", Helvetica;
-  margin-top: 10px;
   font-size: 15px;
   padding-top: 3px;
   padding-bottom: 3px;
@@ -171,6 +185,7 @@
   margin-right: 40%;
   text-align: center;
   padding-right: 0px;
+  margin-top: 10px;
 
 }
 
