--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -31,12 +31,19 @@
   margin-bottom:10px;
   line-height: 24px;
   font-weight: 200px;
-  max-width: 300
+  width: 500px;
+  max-width: 500px;
+  word-wrap: break-word;
 }
 
 .review-item-values {
   border-bottom: 1px solid rgb(229, 229, 229);
   max-width: 500px;
+}
+
+.edit-delete-review-opt {
+  width: 500px;
+  display: flex;
 }
 
 // .review-item-values li {
