align header name and logout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,7 +105,6 @@ body {
 }
 
 .header-name {
-  padding-top: 1px;
   font-family: 'Lato';
   font-size: 15px;
   font-weight: normal;
@@ -164,10 +163,10 @@ body {
 
 
 .header-button {
-  margin: auto;
   margin-right: 0px;
   margin-left: 8px;
   font-size: 15px;
+  height: 18px;
 
 }
 
