--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,7 @@
 @import 'index.scss';
 @import 'listing-index-item.scss';
 @import 'listing-show.scss';
+@import 'listing-map-info.scss';
 
 
 body {
