add login to create booking

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,6 +120,14 @@ body {
   margin-left: 8px;
 }
 
+.demo-user-button {
+  font-size: 15px;
+  margin-left: 8px;
+  border: 2px solid rgb(64, 217, 172);
+  border-radius: 3px;
+  padding: 3px;
+}
+
 .header-name-button {
   display: flex;
   justify-content: space-between;
