--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -69,31 +69,16 @@
 }
 
 .show-login {
-
-    width: 390px;
-    border: 1px grey;
-    font-family: "Lato", Helvetica;
-    font-size: 50px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    border-radius: 3px;
-    background-color: #40d9ac;;
-    color: white;
-    height: 30px;
-    margin-bottom: 10px;
-    margin-right: 40%;
-    text-align: center;
-    padding-right: 0px;
-    margin-top: 10px;
-    border-radius: 3px;
-
-    width: 390px;
-
-    display: flex;
-    justify-content: center;
-
-
+  max-width: 100px;
+  padding: 10px;
+  border: 1px grey;
+  font-size: 15px;
+  border-radius: 3px;
+  background-color: #40d9ac;
+  color: white;
+  height: 20px;
 }
+
 
 .booking-container-form {
   font-size: 13px;
