initial search bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,7 @@
 @import 'listing-index-item.scss';
 @import 'listing-show.scss';
 @import 'listing-map-info.scss';
+@import 'search-bar.scss';
 
 
 body {
