--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -30,10 +30,10 @@
 }
 
 .index-to-listings {
-  font-size: 26px;
-  color: #333333;
-  font-weight: 700;
-  line-height: 30px;
+  margin-left: 70px;
+  margin-top: 10px;
+  font-size: 15px;
+  color: #a1a1a1;
   font-family: "Lato", Helvetica;
   text-align: center;
 }
