--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -36,7 +36,20 @@
   color: #a1a1a1;
   font-family: "Lato", Helvetica;
   text-align: center;
+  span {
+    border-bottom: solid 1px #a1a1a1;
+    padding-bottom: 3px;
+  }
 }
+
+.index-to-listings:hover {
+  color: black;
+  span {
+    border-bottom: solid 1px black;
+    padding-bottom: 3px;
+  }
+}
+
 
 .landing-page-image {
   width: 500px;
