--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -2,4 +2,99 @@
   margin-left: 70px;
   margin-top: 15px;
   box-sizing: border-box;
+
+}
+
+.search-bar-outer-most {
+  border: 1px solid rgb(229, 229, 229);
+  box-shadow: 0px 0px 2px rgb(229, 229, 229);
+  color: rgb(51, 51, 51);
+  border-radius: 3px;
+}
+
+
+.search-bar {
+  width: 450px;
+  height: 50px;
+  font-size: 15px;
+  padding-left: 5px;
+}
+
+
+.search-form {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.search-container-form {
+  font-size: 14px;
+  border-radius: 3px;
+  width: 450px;
+  display: flex;
+  justify-content: center;
+}
+
+.user-booking {
+  border-bottom: 2px solid rgb(229, 229, 229);
+}
+
+.check-in-out {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.check-in-container {
+  display: flex;
+  flex-direction: column;
+
+}
+
+
+.form-input {
+  width: 50px;
+}
+
+.check-in-out-label {
+  padding-right: 10px;
+  padding-bottom: 5px;
+  font-weight: bold;
+
+}
+
+
+.user-booking-header {
+  margin-bottom: 40px;
+  margin-left: 40px;
+}
+
+.user-booking-container {
+  display: flex;
+  margin-bottom: 40px;
+  margin-left: 40px;
+  margin-top: 20px;
+  font-family: 'Abel', sans-serif;
+  font-size: 15px;
+}
+
+
+
+
+.search-now-button {
+  width: 100px;
+  border: 1px grey;
+  font-family: "Lato", Helvetica;
+  font-size: 15px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border-radius: 3px;
+  background-color: #40d9ac;;
+  color: white;
+  height: 30px;
+  margin-bottom: 10px;
+  text-align: center;
+  padding-right: 0px;
+  margin-top: 10px;
+
 }
