add listing columns

--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -44,6 +44,7 @@
 }
 
 
+
 .booking-form {
   display: flex;
   flex-direction: column;
@@ -69,14 +70,13 @@
 }
 
 .show-login {
-  max-width: 100px;
   padding: 10px;
   border: 1px grey;
   font-size: 15px;
   border-radius: 3px;
   background-color: #40d9ac;
   color: white;
-  height: 20px;
+  margin-right: 300px;
 }
 
 
