--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -331,11 +331,12 @@ body {
 }
 
 .map {
-  width: 500px;
-  height: 500px;
+  width: 480px;
+  height: 480px;
   margin-right: 70px;
   background-color: blue;
   margin-top: 30px;
+  margin-left: 80px;
 }
 
 .listing-index {
