--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -7,9 +7,18 @@
 
 .landing-page-title {
   margin-top: 40px;
-  margin-left: 70px;
+  margin-left: 100px;
+  font-size: 60px;
+  font-weight: 400;
+  color: rgb(51, 51, 51);
+  box-sizing: border-box;
+  font-weight: 600;
+}
+
+.landing-page-second {
+  margin-left: 100px;
   margin-bottom: 15px;
-  font-size: 42px;
+  font-size: 60px;
   font-weight: 400;
   color: rgb(51, 51, 51);
   box-sizing: border-box;
@@ -17,7 +26,7 @@
 }
 
 .landing-page-tagline {
-  margin-left: 70px;
+  margin-left: 100px;
   max-width: 300px;
   color: #a1a1a1;
   font-family: "Lato", Helvetica;
@@ -30,7 +39,7 @@
 }
 
 .index-to-listings {
-  margin-left: 70px;
+  margin-left: 100px;
   margin-top: 10px;
   font-size: 15px;
   color: #a1a1a1;
@@ -52,7 +61,7 @@
 
 
 .landing-page-image {
-  width: 500px;
+  width: 600px;
   height: 400px;
   border-radius: 4px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
