--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -7,7 +7,7 @@
 
 .search-bar-outer-most {
   border: 1px solid rgb(229, 229, 229);
-  box-shadow: 0px 0px 2px rgb(229, 229, 229);
+  box-shadow: 0 0 30px rgb(229, 229, 229);
   color: rgb(51, 51, 51);
   border-radius: 3px;
 }
@@ -18,6 +18,7 @@
   height: 50px;
   font-size: 15px;
   padding-left: 5px;
+  border-bottom: 1px solid rgb(229, 229, 229);
 }
 
 
