add login to book styling

--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -70,13 +70,19 @@
 }
 
 .show-login {
-  padding: 10px;
+  width: 390px;
   border: 1px grey;
-  font-size: 15px;
-  border-radius: 3px;
-  background-color: #40d9ac;
+  font-family: "Lato", Helvetica;
+  font-size: 20px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  background-color: #40d9ac;;
   color: white;
-  margin-right: 300px;
+  height: 40px;
+  margin-right: 40%;
+  text-align: center;
+  padding-right: 0px;
+
 }
 
 
