--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -37,10 +37,10 @@
 
 
 .booking-outer-most {
-  border: 1px solid rgb(229, 229, 229);
-  box-shadow: 0px 0px 2px rgb(229, 229, 229);
+  border-top: 1px solid rgb(229, 229, 229);
+  // box-shadow: 0px 0px 2px rgb(229, 229, 229);
   color: rgb(51, 51, 51);
-  border-radius: 3px;
+  // border-radius: 3px;
 }
 
 
@@ -78,7 +78,7 @@
   padding-bottom: 2px;
   background-color: #40d9ac;;
   color: white;
-  height: 40px;
+  height: 45px;
   margin-right: 40%;
   text-align: center;
   padding-right: 0px;
