--- a/app/assets/stylesheets/listing-show.scss
+++ b/app/assets/stylesheets/listing-show.scss
@@ -145,3 +145,20 @@
   color: white;
   height: 20px;
 }
+
+.listing-daily-cost {
+  font-size: 15px;
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  strong {
+    font-size: 30px;
+  }
+}
+
+.booking-container {
+  border: 1px solid rgb(229, 229, 229);
+  box-shadow: 0px 0px 2px rgb(229, 229, 229);
+  color: rgb(51, 51, 51);
+  border-radius: 3px;
+}
