--- a/app/assets/stylesheets/listing-show.scss
+++ b/app/assets/stylesheets/listing-show.scss
@@ -156,9 +156,18 @@
   }
 }
 
-.booking-container {
+.booking-container-unlogged {
   border: 1px solid rgb(229, 229, 229);
   box-shadow: 0px 0px 2px rgb(229, 229, 229);
   color: rgb(51, 51, 51);
   border-radius: 3px;
+  max-height: 100px;
+}
+
+.booking-container-logged {
+  border: 1px solid rgb(229, 229, 229);
+  box-shadow: 0px 0px 2px rgb(229, 229, 229);
+  color: rgb(51, 51, 51);
+  border-radius: 3px;
+  max-height: 150px;
 }
