--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -10,11 +10,12 @@
   box-shadow: 0 0 30px rgb(229, 229, 229);
   color: rgb(51, 51, 51);
   border-radius: 3px;
+  max-width: 426px;
 }
 
 
 .search-bar {
-  width: 450px;
+  width: 426px;
   height: 50px;
   font-size: 15px;
   padding-left: 5px;
@@ -31,6 +32,7 @@
 .search-container-form {
   font-size: 14px;
   border-radius: 3px;
+  height: 50px;
   width: 450px;
   display: flex;
   justify-content: center;
@@ -42,10 +44,10 @@
   border-bottom: 2px solid rgb(229, 229, 229);
 }
 
-.check-in-out {
+.search-check-in-out {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  // align-items: margin-right;
 }
 
 .check-in-container {
@@ -63,7 +65,7 @@
   padding-right: 10px;
   padding-bottom: 5px;
   font-weight: bold;
-
+  padding-top: 5px;
 }
 
 
@@ -80,10 +82,8 @@
   padding-bottom: 3px;
   background-color: #40d9ac;;
   color: white;
-  height: 30px;
-  margin-bottom: 10px;
+  height: 50px;
   text-align: center;
   padding-right: 0px;
-  margin-top: 10px;
 
 }
