fix search check in out label padding top

--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -61,7 +61,7 @@
   width: 50px;
 }
 
-.check-in-out-label {
+.search-check-in-out-label {
   padding-right: 10px;
   padding-bottom: 5px;
   font-weight: bold;
