--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -341,7 +341,7 @@ body {
 .listing-index {
   padding-top: 5px;
   font-weight: 600px;
-  max-width: 550px;
+  max-width: 800px;
   border-top: 3px solid #333333;
   line-height: 1.1;
   margin-top: 0;
@@ -351,7 +351,7 @@ body {
 }
 
 .listing-photo {
-  width: 300px;
+  width: 33%;
   height: 300px;
   box-sizing: border-box;
   border-radius: 4px;
