increase map height

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -328,13 +328,17 @@ body {
   cursor: pointer;
 }
 
+// .search {
+//   height: 100%
+// }
+
 .map {
   width: 480px;
-  height: 480px;
+  height: 700px;
   margin-right: 70px;
   background-color: blue;
   margin-top: 30px;
-  margin-left: 80px;
+  margin-left: 30px;
   background-attachment: fixed;
 }
 
