--- a/app/assets/stylesheets/listing-show.scss
+++ b/app/assets/stylesheets/listing-show.scss
@@ -22,6 +22,11 @@
   }
 }
 
+.listing-show-body {
+  // justify-content: center;
+  margin-left: 150px;
+}
+
 .listing-show-name {
   margin-top: 10px;
   margin-left: 80px;
