--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -38,10 +38,13 @@
   justify-content: center;
 }
 
-
+.booking-name-photo {
+  width: 300px;
+}
 
 .user-booking {
   border-bottom: 2px solid rgb(229, 229, 229);
+  width: 100%
 }
 
 .search-check-in-out {
