more search bar styling

--- a/app/assets/stylesheets/listing-show.scss
+++ b/app/assets/stylesheets/listing-show.scss
@@ -24,7 +24,9 @@
 
 .listing-show-body {
   // justify-content: center;
-  margin-left: 150px;
+  // margin-left: 150px;
+  margin: 0 auto;
+  width: 75%;
 }
 
 .listing-show-name {
