--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -10,12 +10,12 @@
   box-shadow: 0 0 30px rgb(229, 229, 229);
   color: rgb(51, 51, 51);
   border-radius: 3px;
-  max-width: 426px;
+  max-width: 553px;
 }
 
 
 .search-bar {
-  width: 426px;
+  width: 553px;
   height: 50px;
   font-size: 15px;
   padding-left: 5px;
@@ -32,7 +32,7 @@
 .search-container-form {
   font-size: 14px;
   border-radius: 3px;
-  height: 50px;
+  height: 75px;
   width: 450px;
   display: flex;
   justify-content: center;
@@ -47,9 +47,18 @@
   width: 100%
 }
 
+.search-click-in-picker {
+  font-size: 18px;
+}
+
+.search-check-out-picker {
+  font-size: 18px;
+}
+
 .search-check-in-out {
   display: flex;
   justify-content: center;
+  margin-left: 150px;
   // align-items: margin-right;
 }
 
@@ -66,9 +75,9 @@
 
 .search-check-in-out-label {
   padding-right: 10px;
-  padding-bottom: 5px;
   font-weight: bold;
-  padding-top: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 
@@ -77,15 +86,15 @@
 
 
 .search-now-button {
-  width: 150px;
+  width: 125px;
   border: 1px grey;
   font-family: "Lato", Helvetica;
-  font-size: 15px;
+  font-size: 25px;
   padding-top: 3px;
   padding-bottom: 3px;
   background-color: #40d9ac;;
   color: white;
-  height: 50px;
+  height: 75px;
   text-align: center;
   padding-right: 0px;
 
