--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,3 +1,7 @@
+img {
+  max-width: 100%;
+}
+
 .landing-page {
   margin-top: 20px;
   display: flex;
@@ -5,41 +9,62 @@
 
 }
 
+.landing-page-top-left {
+  width: 45%;
+  margin-left: 5%;
+
+  @media only screen and (min-width: 1300px) {
+    width: 30%;
+    margin-left: 10%
+  }
+}
+
 .landing-page-title {
   margin-top: 40px;
-  margin-left: 80px;
   font-size: 60px;
   font-weight: 400;
   color: rgb(51, 51, 51);
   box-sizing: border-box;
   font-weight: 600;
+
+  @media only screen and (min-width: 1300px) {
+    font-size: 80px;
+  }
 }
 
 .landing-page-second {
-  margin-left: 80px;
   margin-bottom: 15px;
   font-size: 60px;
   font-weight: 400;
   color: rgb(51, 51, 51);
   box-sizing: border-box;
   font-weight: 600;
+
+  @media only screen and (min-width: 1300px) {
+    font-size: 80px;
+  }
 }
 
 .landing-page-tagline {
-  margin-left: 80px;
-  max-width: 300px;
+  max-width: 90%;
   color: #a1a1a1;
   font-family: "Lato", Helvetica;
   font-weight: 300;
   line-height: 24px;
 
+
   strong {
     font-weight: bold;
+  }
+
+   @media only screen and (min-width: 1300px) {
+    font-size: 20px;
+    line-height: 40px;
+    max-width: 100%;
   }
 }
 
 .index-to-listings {
-  margin-left: 80px;
   margin-top: 10px;
   font-size: 15px;
   color: #a1a1a1;
@@ -48,6 +73,10 @@
   span {
     border-bottom: solid 1px #a1a1a1;
     padding-bottom: 3px;
+  }
+
+  @media only screen and (min-width: 1300px) {
+    font-size: 20px;
   }
 }
 
@@ -61,10 +90,16 @@
 
 
 .landing-page-image {
-  width: 600px;
-  height: 435px;
+  width: 45%;
+  margin-left: 5%;
+  height: 65vh;
   border-radius: 4px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+
+   @media only screen and (min-width: 1300px) {
+    margin-left: 0px;
+    width: 55%;
+  }
 }
 
 .landing-page-image-caption {
