--- a/app/assets/stylesheets/listing-show.scss
+++ b/app/assets/stylesheets/listing-show.scss
@@ -26,7 +26,16 @@
   // justify-content: center;
   // margin-left: 150px;
   margin: 0 auto;
-  width: 75%;
+  width: 50vw;
+  margin-left: 25vh;
+  margin-right: 25vw;
+
+  @media only screen and (min-width: 1300px) {
+    margin: none;
+    width: 90vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
 }
 
 .listing-show-name {
@@ -40,7 +49,13 @@
   margin-bottom: 10px;
   font-weight: 900;
 
+  @media only screen and (min-width: 1300px) {
+    font-size: 45px;
+    max-width: 100%;
+    border-bottom: none;
+  }
 }
+
 
 .listing-description-booking {
   max-width: 1000px;
@@ -50,21 +65,32 @@
   margin-bottom: 10px;
   margin-right: 180px;
   font-size: 15px;
+
+  @media only screen and (min-width: 1300px) {
+    max-width: none;
+  }
+
 }
 
 .host-listing-description {
   display: flex;
+
 }
 
 .host-information {
   margin-left: 80px;
   padding-bottom: 10px;
   font-size: 13px;
+
+  @media only screen and (min-width: 1300px) {
+    font-size: 15px;
+  }
 }
 
 .host-name-label {
   font-weight: bold;
   width: 100px;
+  
 }
 
 .listing-show-description {
@@ -73,6 +99,12 @@
   font-size: 13px;
   margin-right: 50px;
   line-height: 20px;
+
+  @media only screen and (min-width: 1300px) {
+    font-size: 15px;
+    line-height: none;
+    width: 90%;
+  }
 }
 
 .listing-show-details {
@@ -83,12 +115,18 @@
   display: flex;
   width: 450px;
   height: 60px;
+  @media only screen and (min-width: 1300px) {
+    font-size: 15px;
+  }
 }
 
 
 .listing-show-label {
   margin-right: 80px;
   font-size: 13px;
+  @media only screen and (min-width: 1300px) {
+    font-size: 15px;
+  }
 }
 
 
@@ -98,6 +136,7 @@
   margin-left: 25px;
   font-size: 13px;
   width: 150px;
+  
 
 }
 
