--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -335,6 +335,9 @@ body {
   width: 100%;
   height: 100%;
   // margin-left: 17px;
+   @media only screen and (max-width: 1000px) {
+    display: block;
+  }
 
 }
 
@@ -370,6 +373,11 @@ body {
   @media only screen and (min-width: 1300px) {
     width: 50%;
   }
+
+   @media only screen and (max-width: 1000px) {
+    width: 100%;
+  }
+
 }
 
 .listing-photo {
