--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -6,6 +6,10 @@ img {
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
+  @media only screen and (max-width: 1000px) {
+    display: block;
+  }
+
 
 }
 
@@ -16,6 +20,10 @@ img {
   @media only screen and (min-width: 1300px) {
     width: 30%;
     margin-left: 10%
+  }
+
+  @media only screen and (max-width: 1000px) {
+    width: 100%;
   }
 }
 
@@ -30,6 +38,8 @@ img {
   @media only screen and (min-width: 1300px) {
     font-size: 80px;
   }
+
+ 
 }
 
 .landing-page-second {
@@ -86,6 +96,7 @@ img {
     border-bottom: solid 1px black;
     padding-bottom: 3px;
   }
+ 
 }
 
 
@@ -99,6 +110,12 @@ img {
    @media only screen and (min-width: 1300px) {
     margin-left: 0px;
     width: 55%;
+  }
+
+   @media only screen and (max-width: 1000px) {
+    width: 100vw;
+    margin-right: 5%;
+    padding-top: 2%;
   }
 }
 
