--- a/app/assets/stylesheets/listing-index-item.scss
+++ b/app/assets/stylesheets/listing-index-item.scss
@@ -27,7 +27,21 @@
       height: 25vh;
     }
   }
+
+  @media only screen and (min-width: 1000px) {
+    grid-template-columns: 47.5% 47.5%;
+    grid-column-gap: 5%;
+    grid-row-gap: 5%;
+
+    img {
+      width: 100%;
+      height: 25vh;
+    }
+  }
+
 }
+
+
 
 .listing-index-header {
   font-size: 20px;
