--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -14,25 +14,28 @@
 
 
 .search-bar {
-  width: 515px;
+  width: 100%;
   height: 75px;
   font-size: 15px;
   padding-left: 5px;
   border-bottom: 1px solid rgb(229, 229, 229);
+  @media only screen and (max-width: 450px) {
+    font-size: 10px;
+  }
 }
 
 
-.search-form {
-  display: flex;
-  flex-direction: column;
-}
+// .search-form {
+//   display: flex;
+//   flex-direction: column;
+// }
 
 
 .search-container-form {
   font-size: 14px;
   border-radius: 3px;
   height: 75px;
-  width: 416px;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -57,14 +60,20 @@
 .search-check-in-out {
   display: flex;
   justify-content: center;
-  margin-left: 150px;
+  width: 100%;
+  // margin-left: 150px;
   // align-items: margin-right;
 }
 
 .check-in-container {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
+  width: 33%;
+  margin-left: 2%;
+}
 
+.check-out-container {
+  width: 33%;
 }
 
 
@@ -85,7 +94,9 @@
 
 
 .search-now-button {
-  width: 125px;
+  // width: 125px;
+  width: 34%;
+
   border: 1px grey;
   font-family: "Lato", Helvetica;
   font-size: 25px;
